# subtensor-Deprecated-

./: .gitignore  .travis.yml  .travis.yml.templ  Cargo.toml  Changelog.txt  Dockerfile  LICENSE  README.md  Untitled.ipynb  docker-compose.yml  install.sh  install_akira_full.sh  install_akira_light.sh  install_kusanagi_full.sh  install_kusanagi_light.sh  tar_binary.sh
.circleci/: config.yml
ci/: before_deploy.sh  install.sh  script.sh
config/: config.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  genesis_runtime.wasm
pallets/subtensor/: Cargo.toml
pallets/subtensor/src/: block_execution.rs  block_reward.rs  connectivity.rs  emission.rs  lib.rs  outcome.txt  staking.rs  subscribing.rs  tests.rs  weights.rs
pallets/subtensor/tests/: block_reward_tests.rs  emission_tests.rs  fee_from_emission.rs  lib.rs  mock.rs  staking.rs  subscribing.rs  temptest.rs  test_xt.rs  weights.rs
pallets/sudo/: Cargo.toml
pallets/sudo/src/: lib.rs  tests.rs
pallets/tao-erc20/: Cargo.toml
pallets/transaction-payment/: Cargo.toml
pallets/transaction-payment/rpc/: Cargo.toml
pallets/transaction-payment/rpc/runtime-api/: Cargo.toml
pallets/transaction-payment/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build.sh  build_all.sh  build_linux.sh  build_macos.sh  build_runtime.sh  install.sh  push_image.sh
scripts/client_test/: reset.sh  start_node.sh
scripts/install/x86_64-apple-darwin/: install_akira.sh  install_kusanagi.sh
scripts/install/x86_64-docker/: docker-compose-akira.yml  docker-compose-kusanagi.yml
scripts/install/x86_64-unknown-linux-gnu/: docker-compose.yml  install_akira.sh  install_akira_systemd.sh  install_kusanagi.sh  install_kusanagi_systemd.sh
scripts/local_testnet/: start_alice.sh  start_bob.sh  start_charlie.sh
scripts/standalone/: start_alice.sh
tools/: generate_config.py  requirements.txt  runtime_upgrader.py
