[package]
authors = ['Const, Parallax, ShibShib']
description = 'Subtensor FRAME pallet'
edition = '2018'
homepage = 'https://www.bittensor.com'
license = 'MIT'
name = 'pallet-subtensor'
version = '1.0.2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', tag = "v0.5.4+sub_v0.1" }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { version = '2.0.0', default-features = false }
sp-arithmetic = { version = '2.0.0', default-features = false }
sp-runtime = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
fixed = { default-features = false, version = '1.5' }

[dev-dependencies]
hex-literal = { version = '0.3.1' }
serde = { features = ['derive'], version = '1.0.101' }

# Substrate dependencies
frame-benchmarking = { default-features = true, version = '2.0.0' }
frame-executive = { default-features = true, version = '2.0.0' }
frame-support = { default-features = true, version = '2.0.0' }
frame-system = { default-features = true, version = '2.0.0' }
frame-system-benchmarking = { default-features = true, version = '2.0.0' }
frame-system-rpc-runtime-api = { default-features = true, version = '2.0.0' }
pallet-aura = { default-features = true, version = '2.0.0' }
pallet-balances = { default-features = true, version = '2.0.0' }
pallet-grandpa = { default-features = true, version = '2.0.0' }
pallet-randomness-collective-flip = { default-features = true, version = '2.0.0' }
#pallet-sudo = { default-features = true, version = '2.0.0' }
pallet-timestamp = { default-features = true, version = '2.0.0' }
pallet-transaction-payment = { default-features = true, version = '2.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = true, version = '2.0.0' }
pallet-scheduler = { default-features = true, version = '2.0.0' }
sp-api = { default-features = true, version = '2.0.0' }
sp-block-builder = { default-features = true, version = '2.0.0' }
sp-consensus-aura = { default-features = true, version = '0.8.0' }
sp-core = { default-features = true, version = '2.0.0' }
sp-inherents = { default-features = true, version = '2.0.0' }
sp-offchain = { default-features = true, version = '2.0.0' }
sp-runtime = { default-features = true, version = '2.0.0' }
sp-session = { default-features = true, version = '2.0.0' }
sp-std = { default-features = true, version = '2.0.0' }
sp-arithmetic = { default-features = true, version = '2.0.0'}
sp-transaction-pool = { default-features = true, version = '2.0.0' }
sp-version = { default-features = true, version = '2.0.0' }
sp-io = { default-features = true, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'sp-std/std',
]