[package]
authors = ['Const, Parallax, ShibShib']
description = 'Subtensor FRAME pallet'
edition = '2018'
homepage = 'https://www.bittensor.com'
license = 'MIT'
name = 'pallet-subtensor'
version = '1.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', tag = "v0.5.4+sub_v0.1" }
serde = { version = "1.0.101", optional = true }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { version = '2.0.0', default-features = false }
sp-arithmetic = { version = '2.0.0', default-features = false }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "1.1.0", path="../transaction-payment/rpc/runtime-api"}
fixed = { default-features = false, version = '1.5' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-std = { version = '2.0.0', default-features = false }
sp-version = { version = '2.0.0'}
sp-api = { version = '2.0.0', features = ['std']}
frame-executive = {version = "2.0.0", features = ['std'] }
serde = { version = "1.0.101", features = ['std'] }
parity-util-mem = { version = "0.7.0", features = ['primitive-types']}
rand = { version = "0.7.2"  }
sp-application-crypto = { version = "2.0.0" }
pallet-transaction-payment = { version = "2.0.0"}
pallet-sudo = { version = "1.0.1", path = "../sudo"}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'sp-std/std',
]
